editing HTML/CSS

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   
-  <div class="loader1" style="--clr: #ff0"></div>
+  <div class="loader1" style="--clr: #ff0;">
+    <span></span>
+  </div>
 
-
+<a href="#" class="btn" style="--clr1: #ff2770;--clr2: #45f3ff;"><span>Button</span></a>
 
   <script src="script.js"></script>
 </body>
