--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </div>
 
 <a href="#" class="btn" style="--clr1: #ff2770;--clr2: #45f3ff;"><span>Button</span></a>
+<div class="loader2" style="--clr1: #45ffd8;--clr2: #bfff45;">
+  <span></span>
+</div>
 
   <script src="script.js"></script>
 </body>
